deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: theservicename-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: theservicename.cluster.koalaops.com
    http:
      paths:
      - backend:
          service:
            name: theservicename-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - theservicename.cluster.koalaops.com
    secretName: theservicename-tls-cert
status:
  loadBalancer: {}
